[gd_scene load_steps=135 format=2]

[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (3).png" type="Texture" id=1]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (7).png" type="Texture" id=2]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (8).png" type="Texture" id=3]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (9).png" type="Texture" id=4]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (1).png" type="Texture" id=5]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (2).png" type="Texture" id=6]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (4).png" type="Texture" id=7]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (5).png" type="Texture" id=8]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (6).png" type="Texture" id=9]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (23).png" type="Texture" id=10]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (9).png" type="Texture" id=11]
[ext_resource path="res://Sprites/HUD/health bar/health_cinza.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (14).png" type="Texture" id=13]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (20).png" type="Texture" id=14]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (15).png" type="Texture" id=15]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (16).png" type="Texture" id=16]
[ext_resource path="res://Sprites/HUD/health bar/health_branca.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (17).png" type="Texture" id=18]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (10).png" type="Texture" id=19]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (12).png" type="Texture" id=20]
[ext_resource path="res://Scripts/Boss1.gd" type="Script" id=21]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (17).png" type="Texture" id=22]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (18).png" type="Texture" id=23]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (24).png" type="Texture" id=24]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (14).png" type="Texture" id=25]
[ext_resource path="res://Sprites/HUD/health bar/health_transparente.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (19).png" type="Texture" id=27]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (1).png" type="Texture" id=28]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (12).png" type="Texture" id=29]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (13).png" type="Texture" id=30]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (21).png" type="Texture" id=31]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (8).png" type="Texture" id=32]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (16).png" type="Texture" id=33]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (11).png" type="Texture" id=36]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (13).png" type="Texture" id=38]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (10).png" type="Texture" id=39]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (15).png" type="Texture" id=40]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (11).png" type="Texture" id=41]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/iddle (22).png" type="Texture" id=42]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (23).png" type="Texture" id=43]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (29).png" type="Texture" id=44]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (27).png" type="Texture" id=45]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (22).png" type="Texture" id=46]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (21).png" type="Texture" id=47]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (30).png" type="Texture" id=48]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (25).png" type="Texture" id=49]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (18).png" type="Texture" id=51]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (20).png" type="Texture" id=52]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (24).png" type="Texture" id=53]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (28).png" type="Texture" id=54]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (26).png" type="Texture" id=55]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/running (19).png" type="Texture" id=56]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (28).png" type="Texture" id=57]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (33).png" type="Texture" id=58]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (6).png" type="Texture" id=59]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (1).png" type="Texture" id=60]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (14).png" type="Texture" id=61]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (15).png" type="Texture" id=62]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (18).png" type="Texture" id=63]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (9).png" type="Texture" id=64]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (20).png" type="Texture" id=65]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (12).png" type="Texture" id=66]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (26).png" type="Texture" id=67]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (27).png" type="Texture" id=68]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (17).png" type="Texture" id=69]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (19).png" type="Texture" id=70]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (29).png" type="Texture" id=71]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (7).png" type="Texture" id=72]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (21).png" type="Texture" id=73]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (8).png" type="Texture" id=74]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (10).png" type="Texture" id=75]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (13).png" type="Texture" id=76]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (3).png" type="Texture" id=77]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (16).png" type="Texture" id=78]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (5).png" type="Texture" id=79]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (25).png" type="Texture" id=80]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (22).png" type="Texture" id=81]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (30).png" type="Texture" id=82]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (2).png" type="Texture" id=83]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (4).png" type="Texture" id=84]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (31).png" type="Texture" id=85]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (11).png" type="Texture" id=86]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (23).png" type="Texture" id=87]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (24).png" type="Texture" id=88]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (32).png" type="Texture" id=89]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (14).png" type="Texture" id=90]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (1).png" type="Texture" id=91]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (17).png" type="Texture" id=92]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (39).png" type="Texture" id=93]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (12).png" type="Texture" id=94]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (4).png" type="Texture" id=95]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (37).png" type="Texture" id=96]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (16).png" type="Texture" id=97]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (3).png" type="Texture" id=98]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (2).png" type="Texture" id=99]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (15).png" type="Texture" id=100]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (13).png" type="Texture" id=101]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (5).png" type="Texture" id=102]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (36).png" type="Texture" id=103]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (10).png" type="Texture" id=104]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (35).png" type="Texture" id=105]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (7).png" type="Texture" id=106]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (6).png" type="Texture" id=107]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (8).png" type="Texture" id=108]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (11).png" type="Texture" id=109]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (38).png" type="Texture" id=110]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/attacking (34).png" type="Texture" id=111]
[ext_resource path="res://Sprites/Boss/Hidden_Hero/dying (9).png" type="Texture" id=112]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 39 ), ExtResource( 41 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 25 ), ExtResource( 40 ), ExtResource( 33 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 27 ), ExtResource( 14 ), ExtResource( 31 ), ExtResource( 42 ), ExtResource( 10 ), ExtResource( 24 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
}, {
"frames": [ ExtResource( 91 ), ExtResource( 99 ), ExtResource( 98 ), ExtResource( 95 ), ExtResource( 102 ), ExtResource( 107 ), ExtResource( 106 ), ExtResource( 108 ), ExtResource( 112 ), ExtResource( 104 ), ExtResource( 109 ), ExtResource( 94 ), ExtResource( 101 ), ExtResource( 90 ), ExtResource( 100 ), ExtResource( 97 ), ExtResource( 92 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 60 ), ExtResource( 83 ), ExtResource( 77 ), ExtResource( 84 ), ExtResource( 79 ), ExtResource( 59 ), ExtResource( 72 ), ExtResource( 74 ), ExtResource( 64 ), ExtResource( 75 ), ExtResource( 86 ), ExtResource( 66 ), ExtResource( 76 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 78 ), ExtResource( 69 ), ExtResource( 63 ), ExtResource( 70 ), ExtResource( 65 ), ExtResource( 73 ), ExtResource( 81 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 80 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 57 ), ExtResource( 71 ), ExtResource( 82 ), ExtResource( 85 ), ExtResource( 89 ), ExtResource( 58 ), ExtResource( 111 ), ExtResource( 105 ), ExtResource( 103 ), ExtResource( 96 ), ExtResource( 110 ), ExtResource( 93 ) ],
"loop": true,
"name": "attacking",
"speed": 20.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 36 ), ExtResource( 20 ), ExtResource( 38 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 28 ), ExtResource( 51 ), ExtResource( 56 ), ExtResource( 52 ), ExtResource( 47 ), ExtResource( 46 ), ExtResource( 43 ), ExtResource( 53 ), ExtResource( 49 ), ExtResource( 55 ), ExtResource( 45 ), ExtResource( 54 ), ExtResource( 44 ), ExtResource( 48 ) ],
"loop": true,
"name": "running",
"speed": 14.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "attacking"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attacking" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 38 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordRange/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.6, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SwordRange/StaticBody2D/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.6, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "dead"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dead" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 16 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "hitted"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.980392, 0.141176, 0.141176, 1 ), Color( 1, 1, 1, 1 ), Color( 0.980392, 0.141176, 0.141176, 1 ), Color( 1, 1, 1, 1 ), Color( 0.980392, 0.141176, 0.141176, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.752941 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.752941 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.752941 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "iddle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "running"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "running" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "attacking"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "hitted"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "iddle"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "running"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=23]
states/attacking/node = SubResource( 7 )
states/attacking/position = Vector2( 439, 38 )
states/dead/node = SubResource( 8 )
states/dead/position = Vector2( 708, 38 )
states/hitted/node = SubResource( 9 )
states/hitted/position = Vector2( 439, 125 )
states/iddle/node = SubResource( 10 )
states/iddle/position = Vector2( 197, 190 )
states/running/node = SubResource( 11 )
states/running/position = Vector2( 708, 190 )
transitions = [ "iddle", "running", SubResource( 12 ), "running", "iddle", SubResource( 13 ), "iddle", "attacking", SubResource( 14 ), "attacking", "iddle", SubResource( 15 ), "running", "attacking", SubResource( 16 ), "attacking", "running", SubResource( 17 ), "iddle", "hitted", SubResource( 18 ), "attacking", "hitted", SubResource( 19 ), "running", "hitted", SubResource( 20 ), "hitted", "dead", SubResource( 21 ), "hitted", "iddle", SubResource( 22 ) ]
start_node = "iddle"
end_node = "dead"

[sub_resource type="AnimationNodeStateMachinePlayback" id=24]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 47.4366, 84.7498 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 197.862, 84.1629 )

[node name="Boss" type="KinematicBody2D"]
collision/safe_margin = 0.01
script = ExtResource( 21 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.996732, 0.856863, 0.856863, 1 )
self_modulate = Color( 1, 1, 1, 0.958824 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "idle"
frame = 8
playing = true

[node name="Collision_Body" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -2.72312, 15.0617 )
scale = Vector2( 9.0697, 6.89531 )
polygon = PoolVector2Array( 0.521727, 8.39796, -2.48115, 9.61329, -4.48307, 9.51201, -4.94505, 6.67625, -3.7131, 3.63793, -5.79202, 3.33409, -5.56103, -1.02083, -5.02205, -2.74254, -5.79202, -6.38853, -4.56007, -7.50258, -2.17316, -8.11024, -1.01821, -6.28725, -0.325238, -8.21152, 1.1377, -7.80641, 2.44665, -7.19874, 3.6786, -6.38853, 4.75655, -6.18597, 5.75751, -5.47703, 7.45144, -5.88214, 8.29841, -5.67958, 9.06838, -4.16043, 9.45336, -1.93232, 9.37636, 0.903441, 8.29841, 3.03026, 6.1425, 3.43537, 5.21854, 4.34687, 5.83451, 6.06858, 5.68052, 7.99285, 4.29457, 8.60052, 3.29361, 8.29668, 2.13866, 7.28391, 0.983708, 6.06858, 0.598725, 7.58774 )

[node name="ATK_Cooldown" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="Dead" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="Tired" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="Recharge" type="Timer" parent="Tired"]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attacking = SubResource( 2 )
anims/dead = SubResource( 3 )
anims/hitted = SubResource( 4 )
anims/iddle = SubResource( 5 )
anims/running = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 23 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 24 )

[node name="SwordRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordRange"]
position = Vector2( 80.8732, 4.33652 )
scale = Vector2( 1.24, 1 )
shape = SubResource( 25 )
disabled = true

[node name="StaticBody2D" type="StaticBody2D" parent="SwordRange"]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="SwordRange/StaticBody2D"]
visible = false
position = Vector2( 77.3784, 8.51163 )
scale = Vector2( 4.92727, 7.89287 )
polygon = PoolVector2Array( -9.34115, -6.09016, 1.07317, -3.51027, 2.72623, 4.023, -0.910517, 6.60289, 12.8099, 7.32526, 12.8099, 0.307963, 12.1487, -4.74862, 10.8263, -9.70201, -4.21665, -11.2499 )
disabled = true

[node name="Storm_rage" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Attackable_Area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attackable_Area"]
shape = SubResource( 26 )

[node name="Health" type="Node2D" parent="."]
position = Vector2( -63.1753, -29.7826 )
scale = Vector2( 0.3, 0.4 )

[node name="HealthUnder" type="TextureProgress" parent="Health"]
margin_left = -39.2451
margin_top = -73.0
margin_right = 468.755
margin_bottom = 3.0
texture_under = ExtResource( 12 )
texture_over = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Healthbar" type="TextureProgress" parent="Health"]
margin_left = -39.2451
margin_top = -73.0
margin_right = 468.755
margin_bottom = 3.0
max_value = 40.0
value = 40.0
texture_progress = ExtResource( 17 )
tint_progress = Color( 0.243137, 0, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="Health"]
[connection signal="timeout" from="ATK_Cooldown" to="." method="_on_ATK_Cooldown_timeout"]
[connection signal="timeout" from="Dead" to="." method="_on_Dead_timeout"]
[connection signal="timeout" from="Tired" to="." method="_on_Tired_timeout"]
[connection signal="timeout" from="Tired/Recharge" to="." method="_on_Recharge_timeout"]
[connection signal="body_entered" from="SwordRange" to="." method="_on_SwordRange_body_entered"]
[connection signal="timeout" from="Storm_rage" to="." method="_on_Storm_rage_timeout"]
[connection signal="body_entered" from="Attackable_Area" to="." method="_on_Attackable_Area_body_entered"]
[connection signal="body_exited" from="Attackable_Area" to="." method="_on_Attackable_Area_body_exited"]
